# bansho

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LOGO.md  README.md  README_OUTLINE.md  TEST.md  docker-compose.yml  go.mod  go.sum  nightshift-cost-attribution.md  nightshift-test-gap.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-USER-SETUP.md  01-foundation-VERIFICATION.md
.planning/phases/02-authentication/: 02-01-PLAN.md  (+6 more)
cmd/bansho/: main.go
cmd/demo-after/: main.go
cmd/demo-attack/: main.go
cmd/vulnerable-server/: main.go
config/: policies.yaml
demo/: README.md  client_attack.py  policies_demo.yaml  recording_checklist.md  run_before_after.sh  voiceover.md  vulnerable_server.py
docs/: architecture.md  policies.md
infra/: README.md  main.bicep
integration/: demo_runner_test.go
internal/audit/: logger.go  models.go
internal/auth/: api_keys.go  hash.go  hash_test.go
internal/config/: config.go
internal/policy/: loader.go  loader_test.go  models.go
internal/proxy/: server.go  upstream.go
internal/ratelimit/: limiter.go
internal/storage/: postgres.go  redis.go  schema.go
internal/ui/: dashboard.go  dashboard.html
src/bansho/: __init__.py  __main__.py  config.py  main.py
src/mcp_sentinel/: __init__.py  __main__.py  config.py  logging.py  main.py
tests/: test_api_key_hashing.py  test_audit_integration.py  test_audit_logger.py  test_auth_enforcement.py  test_authz_enforcement.py  test_passthrough.py  test_policy_loader.py  test_rate_limit.py  test_security_pipeline.py
(+73 files in other folders)
