[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sentinel-lite"
version = "0.1.0"
description = "Security gateway for the Model Context Protocol (MCP)"
requires-python = ">=3.11"
dependencies = [
  "asyncpg",
  "httpx",
  "mcp",
  "pydantic>=2",
  "pydantic-settings",
  "pyyaml",
  "redis",
  "structlog",

  # Tooling (kept simple for hackathon execution)
  "mypy",
  "pytest",
  "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
